--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
     "prefer-stable": true,
     "require": {
         "php": "^7.4|^8.0",
-        "livewire/livewire": "^2.3"
+        "livewire/livewire": "^2.3",
+        "blade-ui-kit/blade-heroicons": "^0.3.1"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.5",
