--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
     "require": {
         "php": "^7.4|^8.0",
         "livewire/livewire": "^2.3",
-        "blade-ui-kit/blade-heroicons": "^0.3.1"
+        "blade-ui-kit/blade-heroicons": "^0.3.1",
+        "laravel/jetstream": "^2.1"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.5",
